--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
-    "next": "15.1.2",
+    "next": "^15.3.2",
     "next-swagger-doc": "0.4.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^5.8.0",
     "reactflow": "^11.11.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
